[gd_scene load_steps=5 format=3 uid="uid://b43knps7haecr"]

[ext_resource type="Theme" uid="uid://bxysniydt2th7" path="res://checksfinder/ui/themes/checksfinder.tres" id="1_3earw"]
[ext_resource type="Script" uid="uid://dflnsiy4d4ql1" path="res://checksfinder/start_menu.gd" id="2_esdqp"]
[ext_resource type="PackedScene" uid="uid://byqp3jea6xq5w" path="res://checksfinder/ui/themes/button_wrapper.tscn" id="4_tk0ql"]
[ext_resource type="AudioStream" uid="uid://byxudx157vjax" path="res://checksfinder/audio/digright.wav" id="6_kst3m"]

[node name="Start Menu" type="PanelContainer" node_paths=PackedStringArray("starting_focus")]
custom_minimum_size = Vector2(400, 300)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3earw")
script = ExtResource("2_esdqp")
starting_focus = NodePath("VBoxContainer/CenterContainer2/PlayOnline")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "ChecksFinder"
horizontal_alignment = 1

[node name="CenterContainer1" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Settings" parent="VBoxContainer/CenterContainer1" instance=ExtResource("4_tk0ql")]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
tooltip_text = "Change settings of the game"
button_text = "Settings"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="PlayOnline" parent="VBoxContainer/CenterContainer2" instance=ExtResource("4_tk0ql")]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
tooltip_text = "Play online via Archipelago Server"
button_text = "Play Online"

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="PlayOffline" parent="VBoxContainer/CenterContainer3" instance=ExtResource("4_tk0ql")]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
tooltip_text = "Play Offline with a custom board"
button_text = "Play Offline"
disabled = true

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_kst3m")
bus = &"Sound Effects"

[connection signal="wrapped_button_pressed" from="VBoxContainer/CenterContainer1/Settings" to="." method="_on_settings_pressed"]
[connection signal="wrapped_button_pressed" from="VBoxContainer/CenterContainer2/PlayOnline" to="." method="_on_play_online_pressed"]
[connection signal="wrapped_button_pressed" from="VBoxContainer/CenterContainer3/PlayOffline" to="." method="_on_play_offline_pressed"]
